# dnac-sidekick

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: python-package.yml
dnac_sidekick/: cli.py  dnac_sidekick.py
dnac_sidekick/device_commands/: commands.py
dnac_sidekick/generate/: commands.py
dnac_sidekick/generate/j2_templates/: ansible_inventory.j2  pyats_testbed.j2
dnac_sidekick/health/: commands.py
dnac_sidekick/helpers/: topology.py
dnac_sidekick/inventory/: commands.py
dnac_sidekick/licenses/: commands.py
tests/: conftest.py  test_dnac_sidekick.py
